# bcc-ufrn

./: README.md
2025.1/ITP/: mapaProcedural.md
2025.1/ITP/arrayList/: array1.cpp  array2.cpp  array3.cpp  array3.out  array4.cpp  array5.cpp  array6.cpp  array6.out  array7  array7.cpp  array7.out  array8  array8.cpp  array8.out  array9.cpp  array9.out
2025.1/ITP/estruturasDados/: baralho.cpp  fracao.cpp  histograma.cpp
2025.1/ITP/funcoes/: MaiorDaSeq.cpp  TriangleSpecs.cpp  potenciacao.cpp
2025.1/ITP/iniciais/: 001azulejos.cpp  002numMirror.cpp  003game10.cpp  004minMax.cpp  005dissReal.cpp  006nurseSleep.cpp  007camilage.cpp  008boxDeliv.cpp  009autoPilot.cpp  010n_powers_n.cpp  011multiplos.cpp  012triangular.cpp  013posInSeq.cpp  014mediaArit.cpp  015numAppears.cpp  016nPrimes.cpp  017shapes_ALL.cpp  018num-perfeito.cpp
2025.1/ITP/loopList/: practiceLasso10.cpp  practiceLasso12.cpp
2025.1/ITP/matrizList/: escalarMult.cpp  identidade.cpp  matrizMult.cpp  somaMatriz.cpp  transposta.cpp
2025.1/ITP/ponteiros/: arrayDinam.cpp  arrayDouble.cpp  zipbomb.cpp
2025.1/ITP/prova1/: ataque.cpp  fujao.cpp  pontuacao.cpp
2025.1/ITP/stringList/: bossFinal.cpp  capitalizacao.cpp  criptoMaria.cpp  multiplexador.cpp  numVogais.cpp  placaCarro.cpp  rimaJose.cpp  wordFind.cpp
2025.1/MC1/: CifraCesar.cpp  questao2.cpp  questao3.cpp  questao4.cpp  questao5e6.cpp
2025.1/MC1/questao1/: div.cpp  mod.cpp  mod.h  piso.cpp  primos.cpp  teto.cpp
2025.2/LP1/mergesort-exercise/: CMakeLists.txt  README.md
2025.2/LP1/mergesort-exercise/src/: main_merge.cpp  main_merge.out
(+55 files in other folders)
